// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectorInstrumentationPlugin 1. selectorInstrumentationPlugin: 1. selectorInstrumentationPlugin 1`] = `
"
export const selectNothing = createSelector();

      ↓ ↓ ↓ ↓ ↓ ↓

export const selectNothing = makeCreateSelector(\\"selectNothing\\")();
"
`;

exports[`selectorInstrumentationPlugin 2. selectorInstrumentationPlugin: 2. selectorInstrumentationPlugin 1`] = `
"
export const selectState = createSelector(state, state => state.get(\\"stuff\\"));

      ↓ ↓ ↓ ↓ ↓ ↓

export const selectState = makeCreateSelector(\\"selectState\\")(state, state => state.get(\\"stuff\\"));
"
`;

exports[`selectorInstrumentationPlugin 6. selectorInstrumentationPlugin: 6. selectorInstrumentationPlugin 1`] = `
"
import { createSelector } from \\"reselect\\";

      ↓ ↓ ↓ ↓ ↓ ↓

import { makeSelectorCreator } from \\"make-create-selector\\";
"
`;

exports[`selectorInstrumentationPlugin 7. selectorInstrumentationPlugin: 7. selectorInstrumentationPlugin 1`] = `
"
import { defaultMemoize, createSelector } from \\"reselect\\";

      ↓ ↓ ↓ ↓ ↓ ↓

import { defaultMemoize } from \\"reselect\\";
import { makeSelectorCreator } from \\"make-create-selector\\";
"
`;

exports[`selectorInstrumentationPlugin 8. selectorInstrumentationPlugin: 8. selectorInstrumentationPlugin 1`] = `
"
export const selectFromMultipleThings = createSelector(selectFrom1, selectFrom2, selectFrom3, (t1, t2, t3) => t1 + t2 / t3);

      ↓ ↓ ↓ ↓ ↓ ↓

export const selectFromMultipleThings = makeCreateSelector(\\"selectFromMultipleThings\\")(selectFrom1, selectFrom2, selectFrom3, (t1, t2, t3) => t1 + t2 / t3);
"
`;
